# ea-gdtoa

./: .gitignore  .gitmodules  Makefile  README  meson.build  premake5.lua
docs/: Jenkinsfile
include/: arith.h  gd_qnan.h  gdtoa.h  gdtoaimp.h
src/: arithchk.c  dmisc.c  dtoa.c  g_Qfmt.c  g__fmt.c  g_ddfmt.c  g_dfmt.c  g_ffmt.c  g_xLfmt.c  g_xfmt.c  gdtoa.c  gethex.c  gmisc.c  hd_init.c  hexnan.c  meson.build  misc.c  qnan.c  smisc.c  strtoIQ.c  strtoId.c  strtoIdd.c  strtoIf.c  strtoIg.c  strtoIx.c  strtoIxL.c  strtod.c  strtodI.c  strtodg.c  strtodnrp.c  strtof.c  strtopQ.c  strtopd.c  strtopdd.c  strtopf.c  strtopx.c  strtopxL.c  strtorQ.c  strtord.c  strtordd.c  (+5 more)
test/: Qtest.c  dItest.c  ddtest.c  dt.c  dtest.c  ftest.c  getround.c  meson.build  strtodt.c  xLtest.c  xQtest.c  xtest.c
tools/: CI.jenkinsfile  Jenkinsfile
